<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="release_information">Release Information</string>
    <string name="overview">Overview</string>
</resources>
